<resources>
    <string name="app_name">SocialJam</string>
    <string name="title_activity_maps1">Playas</string>
    <string name="title_activity_maps_bibliotecas">Bibliotecas</string>
    <string name="next_arrow">\u003E</string>
    <string name="back_arrow">\u003C</string>
    <string name="UserName">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">Email</string>
    <string name="RepitePassword">Repite Contraseña</string>
    <string name="VerTodo">Ver Usuarios</string>
    <string name="correos">Correos</string>
    <string name="comidaRapida">Comida Rápida</string>
    <string name="cines">Cines</string>
    <string name="bibliotecas">Bibliotecas</string>
    <string name="gasolineras">Gasolineras</string>
    <string name="gimnasios">Gimnasios</string>
    <string name="museos">Museos</string>
    <string name="playas">Playas</string>
    <string name="tiendasRopa">Tiendas Ropa</string>
    <string name="imageContDesc">Descripción de la imagen. Falta rellenar.</string>
    <string name="AdminPanel">Panel de Administrador</string>
    <string name="GreenButton">Green</string>
    <string name="YellowButton">Yellow</string>
    <string name="OrangeButton">Orange</string>
    <string name="RedButton">Red</string>
    <string name="BlackButton">Black</string>
    <string name="ActualizarNivel">Actualizar Nivel</string>
</resources>