<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ModifyActivity" >

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/AdminPanel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ListView
        android:id="@+id/lv_todo"
        android:layout_width="376dp"
        android:layout_height="575dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle">

    </ListView>

    <RadioGroup
        android:id="@+id/rg_niveles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_todo"
        app:layout_constraintVertical_bias="0.369">

        <RadioButton
            android:id="@+id/rb_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GreenButton"
            android:textColor="#4CAF50" />

        <RadioButton
            android:id="@+id/rb_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YellowButton"
            android:textColor="#FFEB3B" />

        <RadioButton
            android:id="@+id/rb_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrangeButton"
            android:textColor="#FF9800" />

        <RadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RedButton"
            android:textColor="#F44336" />

        <RadioButton
            android:id="@+id/rb_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BlackButton" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>